# probable-tribble

./: README.md  install.sh  pyproject.toml  requirements.txt  setup.sh  setup_db.sh
homebrew/: eburon-codemaxxx.rb
kissme/: README.md  token.html
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/codemaxxx/: __init__.py  agent.py  database.py  machine_uid.py  main.py  ollama_client.py  skills.py  tools.py  tui.py  workflow.py
src/codemaxxx/kissme/: __init__.py  auth.py
standalone/: pyproject.toml
standalone/codemaxxx/: __init__.py  agent.py  app.py  config.py  db.py  llm.py  tools.py  tui.py
zsh/: eburon_bootstrap.zsh
